--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,17 @@
 .App-link {
   color: #09d3ac;
 }
+
+.PanelImagen{
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0%;
+  }
+}
