--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@
   -webkit-animation-delay: 0.1s;
   animation-delay: 0.1s;
   --x1: 0;
-  --x2: 95%;
+  --x2: 100%;
 }
 
 h1 {
@@ -181,4 +181,34 @@ h1 {
 }
 .info a {
   color: inherit;
+}
+.punto {
+  font-size: 15px;
+  color: green;
+}
+.punto td:nth-child(1) {
+  color: #ce5937;
+  font-size: 15px;
+}
+.punto td {
+  vertical-align: top;
+  border: 1px solid #ddd;
+  padding: 2px 10px;
+  vertical-align: middle;
+}
+
+.dataMatrix {
+  margin-top: 24px;
+  width: unset;
+}
+main table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  table-layout: auto;
+  width: 100%;
+  font-size: 0.875rem;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
