--- a/src/VistaInicial/inicial.css
+++ b/src/VistaInicial/inicial.css
@@ -1,50 +1,42 @@
-.sombra{
-    box-sizing: border-box;
-    border-radius: .4rem;
-    overflow: hidden;
-    transform: translateY(-.5%);
-    box-shadow: 0 4rem 8rem rgba(0, 0, 0, .2);
-    background: none;
+.sombra {
+  box-sizing: border-box;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  transform: translateY(-0.5%);
+  box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.2);
+  background: none;
 }
 
-.h1{
-    text-shadow: 1px 2px #999;
- }
+.h1 {
+  text-shadow: 1px 2px #999;
+}
 
- @keyframes bounceOut {
-    20% {
-      transform: scale3d(0.9, 0.9, 0.9);
-    }
-  
-    50%,
-    55% {
-      opacity: 1;
-      transform: scale3d(1.1, 1.1, 1.1);
-    }
-  
-    to {
-      opacity: 0;
-      transform: scale3d(0.3, 0.3, 0.3);
-    }
-  }
-  
-  .bounceOut {
-    animation-duration: 0.75s;
-    animation-name: bounceOut;
+@keyframes bounceOut {
+  20% {
+    transform: scale3d(0.9, 0.9, 0.9);
   }
 
-  body {
-    background-color: #193c6d;
-    filter: progid: DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#003073', endColorstr='#029797');
-    background-image: url(//img.alicdn.com/tps/TB1d.u8MXXXXXXuXFXXXXXXXXXX-1900-790.jpg);
-    background-size: 100%;
-    background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(0, #003073), color-stop(100%, #029797));
-    background-image: -webkit-linear-gradient(135deg, #003073, #029797);
-    background-image: -moz-linear-gradient(45deg, #003073, #029797);
-    background-image: -ms-linear-gradient(45deg, #003073 0, #029797 100%);
-    background-image: -o-linear-gradient(45deg, #003073, #029797);
-    background-image: linear-gradient(135deg, #003073, #029797);
-    text-align: center;
-    margin: 0px;
-    overflow: hidden;
+  50%,
+  55% {
+    opacity: 1;
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  to {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+}
+
+.bounceOut {
+  animation-duration: 0.75s;
+  animation-name: bounceOut;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
