--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@
   height: 80vh;
   background-position: center;
 }
+.FondoAlternativo {
+  background-image: url("https://i.pinimg.com/originals/ae/32/32/ae3232ef2eeaac0d2a55984c017dfd0b.jpg");
+  height: 50vh;
+  background-position: top;
+}
 
 .PanelImagen {
   animation-duration: 2s;
@@ -216,4 +221,3 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
